# flu-infection

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: 17-18.xlsx  first_season.ipynb  flu-infection.ipynb  merged17-19.ipynb  merged17-20.ipynb  merged17-20.xlsx  second_season.ipynb  third_season.ipynb  two-years-static.xlsx  untitled-Copy1.ipynb
